--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Setup
         run: |
-          sudo apt-get update && apt-get install libegl1
+          sudo apt-get install -y libegl1
 
       - name: Build
         run: |
